--- a/package.json
+++ b/package.json
@@ -21,8 +21,7 @@
   "dependencies": {
     "ejs": "^3.1.10",
     "express": "^5.1.0",
-    
-    "nodemon": "^3.1.10"
-  },
-  "devDependencies": {}
+    "nodeman": "^1.1.2",
+    "nodemon": "^3.1.11"
+  }
 }
