--- a/Miscllineous/BackEnd/package.json
+++ b/Miscllineous/BackEnd/package.json
@@ -8,10 +8,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "experss": "^0.0.1-security",
     "express": "^5.1.0",
     "mysql2": "^3.15.3",
     "node": "^24.9.0",
-    "nodemon": "^3.1.10"
+    "nodemon": "^3.1.11"
   },
   "description": ""
 }
